# B2B_lead_gen_emails

./: .env.local  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
scrape_businesses/: main.py
scrape_businesses/businesses/: New_York_restaurant.json
src/get_info_business/: crew.py  main.py
src/get_info_business/config/: agents.yaml  tasks.yaml
